recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:3: error: ';' expected but 'else' found.
    } else  {
      ^Sierpinski:13: error: expected class or object definition
def sierpinski(level:Int, length:Double) {
^Sierpinski:21: error: expected start of definition
	override def run() {
                 ^Sierpinski:25: error: Unmatched closing brace '}' ignored here
}
^